# kde1-kdelibs

./: CMakeLists.txt
common/: config.h.in
kdecore/: ksock.cpp  libintl.cpp
po/: br.po  el.po  en_UK.po  fr.po  is.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ro.po  th.po  tr.po  zh_CN.po  zh_TW.po
